--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 224 71.4% 4.1%;
+    --brand-lighter: 158.1 64.4% 51.6%;
+    --brand: 160.1 84.1% 39.4%;
+    --brand-darker: 161.4 93.5% 30.4%;
+    --info: 198.6 88.7% 48.4%;
+    --warning: 37.7 92.1% 50.2%;
+    --error: 349.7 89.2% 60.2%;
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
@@ -62,5 +68,21 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  input,
+  textarea {
+    @apply w-full outline-none focus:outline-none;
+  }
+}
+
+@layer utilities {
+  .cont {
+    @apply mx-auto w-full max-w-screen-xl px-4 md:px-5 lg:px-10 2xl:px-0;
+  }
+  .h-screen {
+    height: calc(100vh - calc(100vh - 100%));
+  }
+  .max-h-screen {
+    max-height: calc(100vh - calc(100vh - 100%));
   }
 }
